2002-11-12  Christian Reis    <kiko@async.com.br>

	* gtk.py: Fix typo In GtkScrolledWindow - has_attr() was being
	used as a method of the `attrs' hash, changed to has_key().

2002-11-11  Christian Reis    <kiko@async.com.br>

	* gtkmodule.c, gtk.py: implement GtkCList.set_focus_row to allow
	working around GTK+ bug in SELECTION_BROWSE mode where select_row
	does not move focus_row accordingly.

	* libglade.py: raise exception when creating GladeXML instance
	if C module returns None.

2002-11-03  Christian Reis    <kiko@async.com.br>

        * gtkmodule.c, gtk.py: wrap gtk_radio_button_group() (bug #93772)

2002-08-23  James Henstridge  <james@daa.com.au>

	* NEWS: add news items.

	* configure.in: update version number.

	* gtk.py (GtkWidget.queue_draw_area): fix up function.
	(GtkWidget.queue_clear): here too.
	(GtkWidget.queue_clear_area): and here.

2002-08-22  James Henstridge  <james@daa.com.au>

	* NEWS: add news for PyGTK 0.6.10.

2002-08-20  James Henstridge  <james@daa.com.au>

	* gtk.py: always call _gtk.gtk_init().  This way people can check
	for the runtime error on import of gtk.

2002-08-18  James Henstridge  <james@daa.com.au>

	* libglademodule.c (_wrap_glade_xml_get_widget_prefix): add
	method (from bug #72659).

	* libglade.py (GladeXML.get_widget_prefix): add method wrapper.

	* pygtk.spec: fix up spec file to reflect new locations of files.

	* pygtk.py: helper script for parallel installs.

	* Makefile.am: fix up makefile for parallel install.

2002-08-14  Johan Dahlin  <jdahlin@telia.com>

	Patch from Christian Reis <kiko@async.com.br>, fixes bug 88845:
	* gtk.py: Add pos argument to Editable.insert_text
        * gtkmodule.c: Dito

2002-04-08  Matt Wilson  <msw@redhat.com>

	* gdkpixbufmodule.c (pygdk_pixbuf_scale, pygdk_pixbuf_composite)
	(pygdk_pixbuf_composite_color): parse arguments as double for
	those functions that take doubles.

	* generate/gtkmisc.defs (gtk_pixmap_set): added (null-ok).  NULL
	means that the pixmap has no alpha.
